# apollobot

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/apollobot/: __init__.py  cli.py
src/apollobot/agents/: __init__.py  commercializer.py  executor.py  implementor.py  orchestrator.py  planner.py  translator.py
src/apollobot/core/: __init__.py  mission.py  provenance.py  session.py  translation.py
src/apollobot/domains/: __init__.py
src/apollobot/mcp/: __init__.py  fallback.py
src/apollobot/mcp/fallback/: __init__.py  _base.py  _bioinformatics.py  _comp_chem.py  _cs_ml.py  _economics.py  _literature.py  _physics.py
src/apollobot/mcp/servers/: __init__.py  builtin.py
src/apollobot/notifications/: __init__.py  channel.py  checkpoint.py  config.py  events.py  heartbeat.py  router.py
src/apollobot/notifications/channels/: __init__.py  console.py  discord.py  email.py  google_chat.py  slack.py  telegram.py  webhook.py
src/apollobot/review/: __init__.py  journal_client.py  notify.py  pipeline.py  submission.py
src/apollobot/server/: __init__.py  app.py  checkpoint.py  errors.py  registry.py
tests/: __init__.py  conftest.py  test_channels.py  test_checkpoint.py  test_clean_text.py  test_commercializer.py  test_config.py  test_fallback_bioinformatics.py  test_fallback_comp_chem.py  test_fallback_economics.py  test_fallback_physics.py  test_implementor.py  test_journal_client.py  test_mcp_fallback.py  test_mcp_server.py  test_mcp_smoke_eval.py  test_mcp_validation.py  test_mission.py  test_notifications.py  test_pipeline.py  test_planner_validators.py  test_review.py  test_session.py  test_translator.py
